--- a/FASTSim/README
+++ b/FASTSim/README
@@ -22,6 +22,8 @@ Finally the objects folder has all of the files necessary to render an object in
 
 It's possible to made a CAD for an object in blender and save it as a *.blend. What you then need to do is add a texture to the UV tab. Then select all the vertices in edit mode of your object and hit U for unwrap. Once you do that you can export everything to an OBJ. If you did it right you can open the obj file in plain text and you will see v for vertices vn for normals vt for texture vertices and then f for face in the format f v/vt/vn.
 
+You might need to open up the mtl file and make sure the path to the texture is correct.
+
 2.) Once you have a good idea of what files you need to run the simulation you can then run the make_links 
 script. Again the default is to just link all of the PortalCube files
 
